syntax = "proto3";

package order;

service Order {
  rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
  rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse);
}

message Product {
  string id = 1;
  string color = 2;
  string description = 3;
  float price = 4;
}

message PlaceOrderRequest {
  repeated Product products = 1;
}

message PlaceOrderResponse {
  string orderId = 1;
  string message = 2;
}

message UpdateOrderRequest {
  repeated Product products = 1;
  string orderId = 2;
}

message UpdateOrderResponse {
  string orderId = 1;
  string message = 2;
}
